dist/1.0/bin/sample/retrieveUnpackaged/objects/Tariff__c.object
<CustomObject>
    <description>Dictionary of Tariffs that can be used during configuration.</description>
    <fields>
        <fullName>Banding_Model_ID__c</fullName>
        <description>Banding Model Record Id for this Tariff</description>
        <inlineHelpText>Banding Model Record Id for this Tariff</inlineHelpText>
        <label>BandingModel</label>
        <referenceTo>Banding_Model__c</referenceTo>
        <relationshipLabel>Tariffs</relationshipLabel>
        <relationshipName>Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>Identifier from Durian</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field; identifier from Billing system</inlineHelpText>
        <label>Billing ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Locations assigned to this Tariff</description>
        <inlineHelpText>GTS Locations assigned to this Tariff</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if tariff will be displayed for Simplified Orders.</description>
        <inlineHelpText>Flag indicating if tariff will be displayed for Simplified Orders.</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Tariff Source Record Id, which will be used for pointing reference on every related object</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Tariff Source Record Id, which will be used for pointing reference on every related object</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tariff_Name_SVK__c</fullName>
        <description>Label</description>
        <inlineHelpText>Label</inlineHelpText>
        <label>Tariff Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Tariff</description>
        <inlineHelpText>Type of Tariff</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redirection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Validity date of this tariff (if left empty the tariff is always valid); Validity is used for filtering available Tariffs in Product Configurator</description>
        <inlineHelpText>Validity date of this tariff (if left empty the tariff is always valid)</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity date of this tariff (if left empty the tariff is always valid); Validity is used for filtering available Tariffs in Product Configurator</description>
        <inlineHelpText>Validity date of this tariff (if left empty the tariff is always valid)</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Tariff</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Banding_Model_ID__c</columns>
        <columns>GTS_Location__c</columns>
        <columns>Billing_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Tariff_Name_SVK__c</columns>
        <columns>Source_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Slovakia</value>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
        </filters>
        <label>All SK</label>
    </listViews>
    <nameField>
        <label>Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>